* Got rid of Kotlin * Implemented part of my 4-5 months on my unpublished update for Java17 (1.3.2) * Better Debug Logging (Tweakable in META-INF/ENVIRONMENT (DEBUG/RELEASE) before launching the server, or in the gradle.properties ENVIRONMENT before transpilation/compilation) * Better Translatables * Less prone to craches * Better architectury usage * Three languages fully supported: en_us, fr_fr, es_es * More debug verbosity * Some small optimisations not included in this changelog (too many and too small to be listed) * Fixed crashing caused by: Kotlin and Me not registering events properly as Kotlin transpiled my functions as public static foo() and not as public foo() * Added hideHiddenPlayerMarkers (couldn't find better confusing/shorter ratio): if disabled, it will not hide Offline Player Markers from Players that are set Hidden on the map (was enforced to true, is now tweakable, useful for compatiblity and freedom of configuration with mods like BM Player Visibility) * Even Moooooooore translations and verbosity * Config now stops refecthing from disk on nearly each access (was set like this because it is fast and doesn't occur often in small server, but as the server scales I/O reads/writes may start causing unexpected latencies)   => May need to put it as tweakable for either: boot and manual reload or automatic reload on change, because we still access thes file's cached (or not) metadata to get the last time it was edited * Now using minecraft enums for compatibility reasons (ex: that one minecraft fortress td mode that uses a custom game mode) * Fixed an error where BlueMap would not match Minecraft World ResourceLocation with BlueMap World...   => Now directly send the string identifier and Bluemap fecthes the map perfectly, If you experience errors because the mod cannot fetch the correct BlueMap Map (and it do exists), please consider updating BlueMap (or downgrading this mod)
-- These changes are WIP and will be let AS IT IS, unless someone finds a w